@@ -2,58 +2,45 @@ package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.User;
-import ru.yandex.practicum.filmorate.storage.UserStorage;
+import ru.yandex.practicum.filmorate.storage.users.UserStorage;
 
-import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.List;
 
-@RequiredArgsConstructor
 @Service
+@RequiredArgsConstructor
 public class UserService {
     private final UserStorage userStorage;
 
+
     public void addFriend(Long userId, Long friendId) {
-        User user = userStorage.getUserById(userId);
-        User friend = userStorage.getUserById(friendId);
-        user.getFriends().add(friendId);
-        userStorage.update(user);
-        friend.getFriends().add(userId);
-        userStorage.update(friend);
+        userStorage.addFriendship(userId, friendId);
     }
 
     public void removeFriend(Long userId, Long friendId) {
-        User user = userStorage.getUserById(userId);
-        User friend = userStorage.getUserById(friendId);
-        user.getFriends().remove(friendId);
-        userStorage.update(user);
-        friend.getFriends().remove(userId);
-        userStorage.update(friend);
+        userStorage.deleteFriendship(userId, friendId);
     }
 
-    public Collection<User> getAllFriends(Long userId) {
-        return userStorage.getUserById(userId).getFriends()
-                .stream()
-                .map(userStorage::getUserById)
-                .collect(Collectors.toList());
+    public List<User> getAllFriends(Long userId) {
+        return userStorage.getFriends(userId).stream().toList();
     }
 
-    public Collection<User> getCommonFriends(Long userId, Long friendId) {
-        User user = userStorage.getUserById(userId);
-        User friend = userStorage.getUserById(friendId);
-        return user.getFriends()
-                .stream()
-                .filter(friend.getFriends()::contains)
-                .map(userStorage::getUserById)
-                .collect(Collectors.toList());
+    public List<User> getCommonFriends(Long userId, Long friendId) {
+        return userStorage.getCommonFriends(userId, friendId).stream().toList();
     }
 
-    public Collection<User> getAllUsers() {
-        return userStorage.findAll();
+    public void removeAllUsers() {
+        userStorage.deleteAllUsers();
+    }
+
+    public List<User> getAllUsers() {
+        return userStorage.findAll().stream().toList();
     }
 
     public User getUserById(Long id) {
-        return userStorage.getUserById(id);
+        return userStorage.getUserById(id)
+                .orElseThrow(() -> new NotFoundException("Фильм с id " + id + " не найден"));
     }
 
     public User createUser(User user) {
